--- a/Standard/lstsemantic.sty
+++ b/Standard/lstsemantic.sty
@@ -53,22 +53,91 @@ morestring=[b]",%
 % partial specification; the whole DOL language is currently experimental
 \lstdefinelanguage{dolText}%
 {morekeywords={%
-end,%
-hide,reveal,translate,project,%
+alignment,%
 along,%
-library,logic,syntax,language,%
-ontology,and,then,%
+assuming,%
+and,%
+closed-world,%
+cofree,%
 combine,%
-interpretation,view,alignment,module,for,of,to,relation,%
-circ,var,minimize,%
-keep,forget%
-reject,select%
+cons-ext,%
+end,%
+entails,%
+entailment,%
+equivalence,%
+excluding,%
+extract,%
+free,%
+hide,%
+import,%
+in,%
+for,%
+forget,%
+interpretation,%
+keep,%
+language,%
+library,%
+logic,%
+maximize,%
+model,%
+minimize,%
+network,%
+ni,%
+of,%
+oms,%
+onto,%
+ontology,%
+refined,%
+refinement,%
+reject,%
+relation,%
+remove,%
+result,%
+reveal,%
+select,%
+separators,%
+serialization,%
+spec,%
+specification,%
+substitution,%
+syntax,%
+then,%
+to,%
+translation,%
+using,%
+vars,%
+via,%
+view,%
+where,%
 with,%
-prefix},
+%% percent elided
+cons,%
+ccons,%
+complete,%
+consistent,%
+def,%
+implied,%
+inconsistent,%
+mcons,%
+mono,%
+notccons,%
+notmcons,%
+prefix,%
+wdef},
 alsoletter=-,%
 morecomment=[l]{\%\%\ },%
 morecomment=[n]{\%[}{]\%},%
 morecomment=[s]{\%\{}{\}\%},%
+}[keywords,comments]
+
+%propositional logic
+\lstdefinelanguage{prop}%
+{morekeywords={prop,props,iff,if,and,or,not}
+}[keywords,comments]
+%CASL
+\lstdefinelanguage{CASL}%
+{morekeywords={%
+sort,sorts,op,ops,pred,preds,type,types,free,,assoc,unit,op,generated,forall,if,or,exists,var,vars,not}
 }[keywords,comments]
 
 % HetCASL
