Extended ConsExt to ConservativeExtension

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4971,10 +4971,10 @@ EquivalenceDefinition ::= 'equivalence' EquivalenceName ':'
 EquivalenceName    ::= IRI
 EquivalenceType    ::= GroupOMS '<->' GroupOMS ['=' OMS]
                      | Network '<->' Network ['=' Network]
-ConservativeExtensionDefinition ::= 'cons-ext' ConsExtName [Conservative] ':'
-                        ConsExtType 'for' InterfaceSignature
-ConsExtName         ::= IRI
-ConsExtType         ::= GroupOMS 'of' GroupOMS
+ConservativeExtensionDefinition ::= 'cons-ext' ConservativeExtensionName [Conservative] ':'
+                        ConservativeExtensionType 'for' InterfaceSignature
+ConservativeExtensionName       ::= IRI
+ConservativeExtensionType       ::= GroupOMS 'of' GroupOMS
 AlignmentDefinition ::= 'alignment' AlignmentName
                         [AlignmentCardinality AlignmentCardinality] ':'
                         AlignmentType
@@ -5493,10 +5493,10 @@ In a CURIE without a prefix, the \syntax{reference} part is \notallowed to match
 % EquivalenceType            = GroupOMS , '<->' , GroupOMS  , '=' , OMS
 %                      | Network , '<->' , Network , '=' , Network ;
 %
-% ConservativeExtensionDefinition        = 'module' , ConsExtName , [ Conservative ] , ':' , ConsExtType ,
+% ConservativeExtensionDefinition        = 'module' , ConservativeExtensionName , [ Conservative ] , ':' , ConservativeExtensionType ,
 %                        'for' , InterfaceSignature ;
-% ConsExtName           = IRI ;
-% ConsExtType           = GroupOMS , 'of' , GroupOMS ;
+% ConservativeExtensionName           = IRI ;
+% ConservativeExtensionType           = GroupOMS , 'of' , GroupOMS ;
 %
 % AlignmentDefinition  = 'alignment' , AlignmentName ,
 %                        [ AlignmentCardinalityPair ] , ':' , AlignmentType ,
@@ -10970,11 +10970,11 @@ EquivalenceName    ::= IRI
 EquivalenceType    ::= OMSEquivalence | NetworkEquivalence
 OMSEquivalence     ::= oms-equivalence OMS OMS [OMS]
 NetworkEquivalence ::= network-equivalence Network Network [Network]
-ConservativeExtensionDefinition ::= cons-ext-definition ConsExtName
-                                          [ConservativityStrength] ConsExtType
+ConservativeExtensionDefinition ::= cons-ext-definition ConservativeExtensionName
+                                          [ConservativityStrength] ConservativeExtensionType
                                           InterfaceSignature
-ConsExtName         ::= IRI
-ConsExtType         ::= cons-ext-type OMS OMS
+ConservativeExtensionName         ::= IRI
+ConservativeExtensionType         ::= cons-ext-type OMS OMS
 AlignmentDefinition ::= alignment-definition AlignmentName
                               [AlignmentCardinality AlignmentCardinality]
                               AlignmentType Correspondence*
